# Slate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: buildhelpers.cmake
editor/: CMakeLists.txt  config.yaml
editor/assets/shaders/: basic.frag  grid.vert  icon.frag  linearize_depth.frag  normalsonly.frag  null.frag  outline_depth.frag  overdraw.frag  screen.vert  solid_color.frag  static.vert
editor/assets/shaders/fragment/: basic.frag  entity_icon.frag  entity_solidcolor.frag  icon.frag  linearize_depth.frag  null.frag  solid_color.frag  solidcolor.frag  standard.frag  text.frag
editor/assets/shaders/vertex/: billboard_editor.vert  grid.vert  screen.vert  static.vert  static_PT.vert  text.vert
editor/scenes/: example.json
editor/src/: Context.h  Editor.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h  EditorWindow.cpp  EditorWindow.h  SettingsWindow.cpp  SettingsWindow.h  ViewportCamera.cpp  ViewportCamera.h  main.cpp
editor/src/GUI/: EditorGUI.cpp  EditorGUI.h  Fonts.h  Framebuffer.cpp  Framebuffer.h  ImGuiSnippets.h  ImGuiStyles.cpp  ViewportCamera.cpp  ViewportCamera.h
editor/src/GUI/Panels/: AssetsPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ScenePanel.cpp  ViewportPanel.cpp  ViewportPanel.h
editor/src/Gui/: EditorGUI.cpp  EditorGUI.h  Fonts.h  Framebuffer.cpp  Framebuffer.h  ImGuiSnippets.cpp  ImGuiSnippets.h  ImGuiStyles.cpp
editor/src/Gui/Panels/: AssetsPanel.cpp  AssetsPanel.h  Panel.h  PropertiesPanel.cpp  PropertiesPanel.h  ScenePanel.cpp  ScenePanel.h  ViewportPanel.cpp  ViewportPanel.h
editor/src/Window/: SettingsWindow.cpp  Window.cpp  Window.h
engine/: CMakeLists.txt
engine/include/Slate/: Application.h  BufferObject.h  Components.h  Debug.h  Entity.h  Enums.h  Expect.h  Files.h  Font.h  GameObject.h  IManager.h  Input.h  Math.h  Mesh.h  MeshGenerators.h  Platform.h  Primitives.h  Ref.h  Render.h  Renderer.h  Scene.h  Scope.h  Shader.h  ShaderLibrary.h  ShaderManager.h  Text.h  Time.h  Types.h  UUID.h  Window.h
engine/lib/: Application.cpp  Entity.cpp  Files.cpp  Font.cpp  Input.cpp  Math.cpp  Mesh.cpp  MeshImport.cpp  Render.cpp  Scene.cpp  Shader.cpp  ShaderLibrary.cpp  Time.cpp  UUID.cpp  Window.cpp
engine/src/: Application.cpp  Files.cpp  Input.cpp  Mesh.cpp  ModelComponent.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderManager.cpp  Time.cpp  errors.h
engine/src/ECS/: ModelComponent.cpp  UUID.cpp
